--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,8 +1,3 @@
 backend:
-  commit_messages:
-    create: Create {{collection}} “{{slug}}”
-    update: Update {{collection}} “{{slug}}”
-    delete: Delete {{collection}} “{{slug}}”
-    uploadMedia: Upload “{{path}}”
-    deleteMedia: Delete “{{path}}”
-    openAuthoring: '{{message}}'
+  name: git-gateway
+  branch: main # Branch to update (optional; defaults to master)
